--- a/1. Preparation.md
+++ b/1. Preparation.md
@@ -46,3 +46,6 @@ node -v
 ```
 git version
 ```
+You should see the following if it worked:  
+
+![versions](https://user-images.githubusercontent.com/72712113/149834684-9f64a298-932e-41b3-a6ed-2f196957c691.png)
