--- a/1. Preparation.md
+++ b/1. Preparation.md
@@ -39,7 +39,7 @@ https://code.visualstudio.com/download
 
 
 ## Check-Up:  
-To make sure you have Node.js and Git installed successfully on your system. Run the following in your terminal.
+To make sure you have Node.js and Git installed successfully on your system. Run (type then hit ENTER) the following in your terminal.
 ```
 node -v
 ```
