--- a/2. Structure.md
+++ b/2. Structure.md
@@ -73,7 +73,7 @@ HD Wallet-enabled Web3 provider. We use it to sign transactions for addresses de
 We are going to see a mnemonic later in the tutorial.  
 
 ##
-After we have installed all the dependencies, we can now open the Package.json file in our folder and the dependencies will all be there.  
+After we have installed all the dependencies, we can now open the ```Package.json``` file in our folder and the dependencies will all be there.  
 
 However, we have to edit the "test" attribute by changing it  
 
