--- a/5. Testing.md
+++ b/5. Testing.md
@@ -1,1 +1,5 @@
 # Testing The Smart Contract
+
+Testing the Smart Contract is basically testing the functions of the Solidity Smart Contract by giving it random values and calling them using the Mocha module we imported and JavaScript.  
+
+First, we have to create a folder in the main directory/folder (MyFirstSmartContract). The folder will be called ```test``` and inside of it, create a file and call it ```Name.test.js```.
