--- a/5. Testing.md
+++ b/5. Testing.md
@@ -2,4 +2,18 @@
 
 Testing the Smart Contract is basically testing the functions of the Solidity Smart Contract by giving it random values and calling them using the Mocha module we imported and JavaScript.  
 
-First, we have to create a folder in the main directory/folder (MyFirstSmartContract). The folder will be called ```test``` and inside of it, create a file and call it ```Name.test.js```.
+First, we have to create a folder in the main directory/folder (MyFirstSmartContract). The folder will be called ```test``` and inside of it, create a file and call it ```Name.test.js```.  
+
+AS we were doing before, we are going to copy and paste the following code into the file and then learn what each line of code means and does:  
+
+```
+const assert = require('assert');
+const ganache = require('ganache-cli');
+const Web3 = require('web3');
+const web3 = new Web3(ganache.provider());
+
+// evm: bytecode
+const { abi, evm } = require('../compile');
+```  
+
+As you can see, we are going to use the ABI and the Bytecode(EVM) we got from the Contract compilation we did in the ```compile.js``` file. Also, 
