--- a/5. Testing.md
+++ b/5. Testing.md
@@ -1,6 +1,6 @@
 # Testing The Smart Contract
 
-Testing the Smart Contract is basically testing the functions of the Solidity Smart Contract by giving it random values and calling them using the Mocha module we imported and JavaScript.  
+Testing the Smart Contract is basically testing the functions of the Solidity Smart Contract by giving it random values and calling them using the Mocha module we imported and JavaScript. Of course, our life would be much simpler if we test it on Remix IDE, but, (...)
 
 First, we have to create a folder in the main directory/folder (MyFirstSmartContract). The folder will be called ```test``` and inside of it, create a file and call it ```Name.test.js```.  
 
@@ -16,4 +16,6 @@ const web3 = new Web3(ganache.provider());
 const { abi, evm } = require('../compile');
 ```  
 
-As you can see, we are going to use the ABI and the Bytecode(EVM) we got from the Contract compilation we did in the ```compile.js``` file. Also, 
+As you can see in the last line of code, we are going to use the ABI and the Bytecode(EVM) we got from the Contract compilation we did in the ```compile.js``` file. Also, in the first couple of lines, we import the assert library that we will use to test the Smart Contract in the near future. In addition, we now import the ```ganache-cli```, our local Ethereum Test Network. Also, we will require ```Web3```. Web3 is upper case because it is a constructor function which will let us create ```web3``` instances to use.  
+
+Of course, we will be working on one ```web3``` instance at a time. ```web3``` always expects you to provide it with a provider so that it can connect to the ```ganache``` test network.
