--- a/5. Testing.md
+++ b/5. Testing.md
@@ -18,4 +18,39 @@ const { abi, evm } = require('../compile');
 
 As you can see in the last line of code, we are going to use the ABI and the Bytecode(EVM) we got from the Contract compilation we did in the ```compile.js``` file. Also, in the first couple of lines, we import the assert library that we will use to test the Smart Contract in the near future. In addition, we now import the ```ganache-cli```, our local Ethereum Test Network. Also, we will require ```Web3```. Web3 is upper case because it is a constructor function which will let us create ```web3``` instances to use.  
 
-Of course, we will be working on one ```web3``` instance at a time. ```web3``` always expects you to provide it with a provider so that it can connect to the ```ganache``` test network.
+Of course, we will be working on one ```web3``` instance at a time. ```web3``` always expects you to provide it with a provider so that it can connect to the ```ganache``` test network.  
+
+Now, you need to add these lines of codes that will resemble the whole testing process:  
+
+```
+let accounts;
+let name;
+
+beforeEach(async () => {
+    // Get a list of all accounts
+    accounts = await web3.eth.getAccounts();
+    name = await new web3.eth.Contract(abi)
+      .deploy({
+        data: evm.bytecode.object,
+      })
+      .send({ from: accounts[0], gas: '1000000' });
+});
+
+
+describe('Name', () => {
+    it('deploys a contract', () => {
+      assert.ok(name.options.address);
+    });
+    it('can change then get the name', async () => {
+        await name.methods.setName('sharbel').send({ from: accounts[0] });
+        const _name = await name.methods.getName().call();
+        assert.equal(_name, 'sharbel');
+      });
+});
+```  
+
+At first, created the variables ```accounts``` and ```name``` in order to instantiate them in the ```beforeEach``` method.  
+
+Let us take a step back, In order to test, we are going to use the ```mocha``` module which lets us use those ```it``` methods we see above.   
+
+First, to test, we need 2 methods: ```beforeEach``` and ```describe```. The ```describe``` method will contain all the tests we want to make on our Smart Contract. However, the statements that we find are common in all tests, are put in the ```beforeEach``` method, acting like a constructor.
