--- a/5. Testing.md
+++ b/5. Testing.md
@@ -51,6 +51,9 @@ describe('Name', () => {
 
 At first, created the variables ```accounts``` and ```name``` in order to instantiate them in the ```beforeEach``` method.  
 
-Let us take a step back, In order to test, we are going to use the ```mocha``` module which lets us use those ```it``` methods we see above.   
+Let us take a step back, In order to test, we are going to use the ```mocha``` module which lets us use those ```it``` methods we see above. Mocha will also gives us access to the ```beforeEach``` and ```describe``` methods.  
 
-First, to test, we need 2 methods: ```beforeEach``` and ```describe```. The ```describe``` method will contain all the tests we want to make on our Smart Contract. However, the statements that we find are common in all tests, are put in the ```beforeEach``` method, acting like a constructor.
+First, to test, we need 2 methods: ```beforeEach``` and ```describe```. The ```describe``` method will contain all the tests we want to make on our Smart Contract. However, the statements that we find are common in all tests, are put in the ```beforeEach``` method, acting like a constructor.  
+
+So first, we will deploy an instance of our contract, manipulate it by giving it values, then make assertions about the contract to make sure it is working well.
+
