--- a/5. Testing.md
+++ b/5. Testing.md
@@ -55,5 +55,10 @@ Let us take a step back, In order to test, we are going to use the ```mocha``` m
 
 First, to test, we need 2 methods: ```beforeEach``` and ```describe```. The ```describe``` method will contain all the tests we want to make on our Smart Contract. However, the statements that we find are common in all tests, are put in the ```beforeEach``` method, acting like a constructor.  
 
-So first, we will deploy an instance of our contract, manipulate it by giving it values, then make assertions about the contract to make sure it is working well.
+So first, we will deploy an instance of our contract, manipulate it by giving it values, then make assertions about the contract to make sure it is working well.  
 
+We need an external account to deploy this contract, and this is how ganache-cli gets to work. Ganache will provide us with accounts to test with (accounts will be unlocked so we do not need private and public keys to access them). We will use web3 to access those accounts.  
+
+So in the beforeEach method, we will instatiate the account variable. We will use the ```web3``` instance then the Ethereum ```eth``` module to get all the accounts, therefore the ```web3.eth.getAccounts()``` line.  
+
+The, we will use the ```web3.eth``` instance again to create a ```new``` contract and provide it with the ABI (collection of variables and methods we want). We will also deploy it by providing it with the ```bytecode```. Then to send it to the blockchain, we will use the first account (accounts[0]) and choose the gas value of the transaction to be 1000000 gas.
