--- a/5. Testing.md
+++ b/5. Testing.md
@@ -61,4 +61,4 @@ We need an external account to deploy this contract, and this is how ganache-cli
 
 So in the beforeEach method, we will instatiate the account variable. We will use the ```web3``` instance then the Ethereum ```eth``` module to get all the accounts, therefore the ```web3.eth.getAccounts()``` line.  
 
-The, we will use the ```web3.eth``` instance again to create a ```new``` contract and provide it with the ABI (collection of variables and methods we want). We will also deploy it by providing it with the ```bytecode```. Then to send it to the blockchain, we will use the first account (accounts[0]) and choose the gas value of the transaction to be 1000000 gas.
+The, we will use the ```web3.eth``` instance again to create a ```new``` contract and provide it with the ABI (collection of variables and methods we want). We will also deploy it by providing it with the ```bytecode```. Then to send it to the blockchain, we will use the first account (accounts[0]) and choose the gas value of the transaction to be 1000000 gas. And,we will put this contract we created in the ```name``` variable. We will then interact with the test contract we created directly by using the ```name``` variable.
