--- a/5. Testing.md
+++ b/5. Testing.md
@@ -61,4 +61,10 @@ We need an external account to deploy this contract, and this is how ganache-cli
 
 So in the beforeEach method, we will instatiate the account variable. We will use the ```web3``` instance then the Ethereum ```eth``` module to get all the accounts, therefore the ```web3.eth.getAccounts()``` line.  
 
-The, we will use the ```web3.eth``` instance again to create a ```new``` contract and provide it with the ABI (collection of variables and methods we want). We will also deploy it by providing it with the ```bytecode```. Then to send it to the blockchain, we will use the first account (accounts[0]) and choose the gas value of the transaction to be 1000000 gas. And,we will put this contract we created in the ```name``` variable. We will then interact with the test contract we created directly by using the ```name``` variable.
+The, we will use the ```web3.eth``` instance again to create a ```new``` contract and provide it with the ABI (collection of variables and methods we want). We will also deploy it by providing it with the ```bytecode```. Then to send it to the blockchain, we will use the first account (accounts[0]) and choose the gas value of the transaction to be 1000000 gas. And,we will put this contract we created in the ```name``` variable. We will then interact with the test contract we created directly by using the ```name``` variable.  
+
+The ```describe``` method contains a list of ```it```methods. Testing a contract means that we want to test every method, and most importantly, if the contract got deployed. We will call the first method 'deploys a contract' and we will use the ```assert.ok``` method which will tell us if what we want to check for exists or not. Checking if the contract exists can be done by requesting to check if a contract address got generated and we do that by interacting with the contract using ```name```. ```name.options.address``` get us the address then we use the ```assert.ok``` method to make sure it exists.  
+
+The second test will be testing the setter and getter methods of the contract. First, we use the ```setName``` method by providing it with any parameter. here I use my name, 'sharbel', and whenever we want to use a setter method, a transaction will be made and that is why we need to specifiy from which account we did that. Next, we will call the getter method and store its result in the constant ```_name```. After that, we will use the ```assert.equal``` method and provide it with the 2 strings we want to compare. We should get 'sharbel' we set first, when we call the getter method and of course, we compare that to a string 'sharbel' and the result should be that they are equal. In this ```it``` method, we tested the getter and setter methods at the same time, usually it is better to test every method alone.  
+
+Remember, testing should not only be for methods. If you have an array that has values, you can make sure it is not empty using an ```it``` method too. Of course the latter was just an example, anything can be tested using the Mocha ```it``` methods.
