--- a/5. Testing.md
+++ b/5. Testing.md
@@ -67,4 +67,18 @@ The ```describe``` method contains a list of ```it```methods. Testing a contract
 
 The second test will be testing the setter and getter methods of the contract. First, we use the ```setName``` method by providing it with any parameter. here I use my name, 'sharbel', and whenever we want to use a setter method, a transaction will be made and that is why we need to specifiy from which account we did that. Next, we will call the getter method and store its result in the constant ```_name```. After that, we will use the ```assert.equal``` method and provide it with the 2 strings we want to compare. We should get 'sharbel' we set first, when we call the getter method and of course, we compare that to a string 'sharbel' and the result should be that they are equal. In this ```it``` method, we tested the getter and setter methods at the same time, usually it is better to test every method alone.  
 
-Remember, testing should not only be for methods. If you have an array that has values, you can make sure it is not empty using an ```it``` method too. Of course the latter was just an example, anything can be tested using the Mocha ```it``` methods.
+Remember, testing should not only be for methods. If you have an array that has values, you can make sure it is not empty using an ```it``` method too. Of course the latter was just an example, anything can be tested using the Mocha ```it``` methods.  
+
+Finally, we can test our contract by going to the terminal and making sure we're in the MyFirstSmartContract folder. Next, we run:  
+
+```
+npm run test
+```  
+
+If the test worked you should see something like this:  
+insert pic  
+
+Hooray! you just successfully tested you First Smart Contract. We test our contracts before deploying them to the blockchain for one main reason. Once the contract is deployed to the blockchain, there is no going back! if the contract is not working correctly, you cannot fix and you will have create a new contract from scratch.  
+
+See you in the deployment! 😃
+
