--- a/5. Testing.md
+++ b/5. Testing.md
@@ -78,7 +78,7 @@ npm run test
 If the test worked you should see something like this:  
 insert pic  
 
-Hooray! you just successfully tested you First Smart Contract. We test our contracts before deploying them to the blockchain for one main reason. Once the contract is deployed to the blockchain, there is no going back! if the contract is not working correctly, you cannot fix and you will have create a new contract from scratch.  
+Hooray! you just successfully tested you First Smart Contract. We test our contracts before deploying them to the blockchain for one main reason. Once the contract is deployed to the blockchain, there is no going back! if the contract is not working correctly, you cannot fix it and you will have to create a new contract from scratch.  
 
 See you in the deployment! 😃
 
