--- a/5. Test.md
+++ b/5. Test.md
@@ -76,7 +76,8 @@ npm run test
 ```  
 
 If the test worked you should see something like this:  
-insert pic  
+
+![test](https://user-images.githubusercontent.com/72712113/150308297-56318ad2-bc35-4737-a464-1915966ccf7d.png)
 
 Hooray! you just successfully tested you First Smart Contract. We test our contracts before deploying them to the blockchain for one main reason. Once the contract is deployed to the blockchain, there is no going back! if the contract is not working correctly, you cannot fix it and you will have to create a new contract from scratch.  
 
