--- a/6. Metamask.md
+++ b/6. Metamask.md
@@ -1,1 +1,75 @@
+# MetaMask  
 
+MetaMask is a software cryptocurrency wallet used to interact with the Ethereum blockchain. It allows users to access their Ethereum wallet through a browser extension or mobile app, which can then be used to interact with decentralized applications.  
+
+## Important
+
+If you already have a MetaMask account, make sure you have test eth in your first account. If you don't have eth in your first account, check this part of the tutorial where we request test eth. Also, make sure you haev your MetaMask 12-word mnemonic written down/saved because we will use it in the deployment part of our tutorial.  
+
+##
+
+If you do not have MetaMask, you have to download its extension and have it pinned on your browser (Google Chrome, Microsoft Edge, etc...). Follow along as we will download the MetaMask extension and get our MetaMask account ready to go!  
+
+First, go to the Google Chrome extension store:  
+
+https://chrome.google.com/webstore/category/extensions
+
+Here, search for MetaMask:  
+
+insert pic  
+
+Click the ```Add To Chrome``` button and let it download, later on you can pin it to your browser so that you can see it more easily.  
+
+Now, you will be redirected to this screen:  
+
+insert pic  
+
+Click ```Get Started``` and then create a new account:  
+
+insert pic  
+
+After that, move along and create a password and make sure you memorize it or write it down because you will use it everytime you want to access MetaMask. Keep going until you reach this screen:  
+
+insert pic  
+
+Click on the blurry picture to reveal your secret recovery phrase or mnemonic. Make sure you download it using the link I marked in the picture above. Now a note file containing this secret phrase is in your Downloads folder on your computer. Note that you will have a different phrase than mine.  
+
+Once you're in, you will notice that you are on the Ethereum Mainnet. We do not want that beacuse we will deploy our Smart Contract on a test network such as Rinkeby Network where we use test Ethereum for our deployemnt and transactions and NOT real money (real Ethereum).  
+
+insert pic  
+
+As you can see in the picture above, the Rinkeby Network is not visible. Follow these steps to enable the test networks:  
+
+insert pic  
+
+Go to the settings like this:  
+
+insert pic  
+
+Then, in the side panel, click on ```Advanced``` and scroll down until you see this, and check it:  
+
+insert pic  
+
+Now go back to the main page and you can see all the networks. Click on the Rinkeby Network:  
+
+insert pic  
+
+Now, we can see that we have no funds in our account. Follow the steps below to request test eth for our account:  
+
+Testnet ETH is available from: https://faucets.chain.link/rinkeby  
+Backup Testnet ETH Faucets: https://rinkeby-faucet.com/, https://app.mycrypto.com/faucet  
+
+Click the first link and you will see this screen:  
+
+insert pic  
+
+You can get the address of your account like this:  
+
+insert pic  
+
+copy it by clicking on it then paste it on the faucet website. Then, choose 0.1 eth. Note that you can do this step multiple times to get more test eth. However, we will use less than 0.1 eth to deploy our contract. When you request, wait for the confirmation and go check your account balance:  
+
+insert pic  
+insert pic  
+
+This is pretty much it. Make sure you have your secret phase with you because we will use it to deploy our Smart Contract on the Rinkeby Ethereum Test Network.
