--- a/6. Metamask.md
+++ b/6. Metamask.md
@@ -16,43 +16,39 @@ https://chrome.google.com/webstore/category/extensions
 
 Here, search for MetaMask:  
 
-insert pic  
+![metamask](https://user-images.githubusercontent.com/72712113/150321594-4975b060-ebad-4b9e-be86-de8c4712c08c.png)  
 
 Click the ```Add To Chrome``` button and let it download, later on you can pin it to your browser so that you can see it more easily.  
 
 Now, you will be redirected to this screen:  
 
-insert pic  
+![started](https://user-images.githubusercontent.com/72712113/150321698-9d88e257-4254-4f89-a31b-2760c20b4e28.png) 
 
 Click ```Get Started``` and then create a new account:  
 
-insert pic  
+![create](https://user-images.githubusercontent.com/72712113/150322233-d0779556-0b09-43b6-a2d7-f63586beea74.png)
 
 After that, move along and create a password and make sure you memorize it or write it down because you will use it everytime you want to access MetaMask. Keep going until you reach this screen:  
 
-insert pic  
+![reveal](https://user-images.githubusercontent.com/72712113/150322610-0de63d27-4135-4ba5-8859-b663eb3c7833.png)
 
 Click on the blurry picture to reveal your secret recovery phrase or mnemonic. Make sure you download it using the link I marked in the picture above. Now a note file containing this secret phrase is in your Downloads folder on your computer. Note that you will have a different phrase than mine.  
 
 Once you're in, you will notice that you are on the Ethereum Mainnet. We do not want that beacuse we will deploy our Smart Contract on a test network such as Rinkeby Network where we use test Ethereum for our deployemnt and transactions and NOT real money (real Ethereum).  
 
-insert pic  
+![nonets](https://user-images.githubusercontent.com/72712113/150322660-75a387cb-d98a-441c-b420-96ca712c9da6.png)
 
-As you can see in the picture above, the Rinkeby Network is not visible. Follow these steps to enable the test networks:  
+As you can see in the picture above, the Rinkeby Network is not visible. Follow these steps to enable the test networks. Go to the settings like this:  
 
-insert pic  
-
-Go to the settings like this:  
-
-insert pic  
+![settings](https://user-images.githubusercontent.com/72712113/150322750-edcaf54e-cf9f-4d65-95c1-31e70442563f.png)
 
 Then, in the side panel, click on ```Advanced``` and scroll down until you see this, and check it:  
-
-insert pic  
+  
+![shownets](https://user-images.githubusercontent.com/72712113/150322818-01675f0d-c468-48d8-8cc8-5930bc60a6b5.png)
 
 Now go back to the main page and you can see all the networks. Click on the Rinkeby Network:  
-
-insert pic  
+ 
+![rinkeby](https://user-images.githubusercontent.com/72712113/150322842-efa3eeba-64d4-43c9-aa0c-e75d4e9366f4.png)
 
 Now, we can see that we have no funds in our account. Follow the steps below to request test eth for our account:  
 
@@ -60,16 +56,16 @@ Testnet ETH is available from: https://faucets.chain.link/rinkeby
 Backup Testnet ETH Faucets: https://rinkeby-faucet.com/, https://app.mycrypto.com/faucet  
 
 Click the first link and you will see this screen:  
+  
+![requestingfunds](https://user-images.githubusercontent.com/72712113/150323047-79a8e622-1e3f-4487-9ef6-50453fb6da10.png)
 
-insert pic  
-
-You can get the address of your account like this:  
-
-insert pic  
+You can get the address of your account like this (your address will be different than mine):  
+ 
+![copyaddress](https://user-images.githubusercontent.com/72712113/150323069-05db7cc9-c758-4e07-8ee0-cc840467f9e1.png)
 
 copy it by clicking on it then paste it on the faucet website. Then, choose 0.1 eth. Note that you can do this step multiple times to get more test eth. However, we will use less than 0.1 eth to deploy our contract. When you request, wait for the confirmation and go check your account balance:  
 
-insert pic  
-insert pic  
+![confirmation](https://user-images.githubusercontent.com/72712113/150323217-4b2dd00b-6465-4953-92be-a3076e9cce65.png)
+![received](https://user-images.githubusercontent.com/72712113/150323229-720965b9-f836-45ef-8d24-8bfd922be3f6.png)
 
 This is pretty much it. Make sure you have your secret phase with you because we will use it to deploy our Smart Contract on the Rinkeby Ethereum Test Network.
