--- a/7. Deploy.md
+++ b/7. Deploy.md
@@ -1,1 +1,106 @@
+# Deploying the Smart Contract
+
+In order to deploy our contract, we need to be able to make requests to the Ethereum Blockchain. However, we do not have access to an Ethereum Node. This is where the Infura API comes to help! Infura is a hosted ethereum node cluster that lets you make requests to the Ethereum blockchain without requiring you to set up your own Ethereum node.  
+
+So, we have to start by making an Infura account, click on the link below and create a new account:  
+
+https://infura.io/  
+
+Once you are on the main dashboard, click on ```CREATE NEW PROJECT```. Fill the form like the picture below:  
+  
+insert pic  
+  
+Now, your project is ready. However, you have to change the network from Mainnetto Rinkeby:  
+  
+insert pic  
+
+After that, we have have to copy the first link:  
+
+insert pic  
+
+This link is the API link we will feed to our deployment file in this tutorial in addition to the 12-word mnemonic (secret phrase).  
+
+##
+
+Now we can start our deployment tutorial by creating the file ```deploy.js``` in your main directory/folder (MyFirstSmartContract):  
+
+insert pic  
+
+Now, copy and paste the following code into your ```deploy.js``` file and we will learn together what each line of code means and does.  
+
+```
+const HDWalletProvider = require('@truffle/hdwallet-provider');
+const Web3 = require('web3');
+
+const { abi, evm } = require('./compile');
+
+provider = new HDWalletProvider(
+  'YOUR METAMASK MNEMONIC',
+  'YOUR INFURA API LINK'
+);
+
+const web3 = new Web3(provider);
+
+const deploy = async () => {
+  const accounts = await web3.eth.getAccounts();
+
+  console.log('Attempting to deploy from account', accounts[0]);
+
+  const result = await new web3.eth.Contract(abi)
+    .deploy({ data: evm.bytecode.object })
+    .send({ from: accounts[0], gas: '1000000' });
+
+  console.log('Contract deployed to', result.options.address);
+  provider.engine.stop();
+};
+
+deploy();
+```  
+
+First, we imported the Truffle HDWallet Provider that will now replace the Ganache Provider we used to test our Smart Contract. As you remember, we had test accounts when we used Ganache. Now, we have a MetaMask account that we will use. As you can see in the code, we feed this HDWaller Provider our mnemomic and the Infura API link. You can get your mnemonic from the file in your downloads. DO NOT use the one I used above because it is just for testing and I will be deleting the account later. Moreover, you should change this line of your code to the following:  
+
+```
+provider = new HDWalletProvider(
+  'YOUR METAMASK MNEMONIC',
+  'YOUR INFURA API LINK'
+);
+```
+```
+provider = new HDWalletProvider(
+  'bicycle tattoo height shock plunge recall frown group pumpkin dose conduct alone',
+  'https://rinkeby.infura.io/v3/7554fd1cee334adf992fe60a22a78cf1'
+);
+```  
+
+After you make sure you copied and pasted your own unique mnemonic and Infura API link, we can now move on to the deployment code. We create an instance of ```web3``` like we did in the testing phase and we give it as a parameter, our wallet provider we edited above. And this is why we have this line: ```const web3 = new Web3(provider)```.  
+
+Now, we will start with ```deploy``` method. First, we need to get all the accounts from our MetaMask and put them in the variable ```accounts```. Next, we will deploy our Smart Contract just like we did in the testing tutorial, of course, using the account we have funds in, which is the first account on MetaMask (accounts[0]). If your funds are in your second account for example, put ```accounts[1]``` instead of ```accounts[0]```. Just to make things clear and organized, we printed the address of the account we used to deploy our contract and the contract address deployed using the following lines of code ```console.log('Attempting to deploy from account', accounts[0])``` and ```console.log('Contract deployed to', result.options.address)```. You will see those addresses in your Command Prompt. If you see both of those lines, this means your Smart Contract has been successfully deployed. Finally , we called our ```deploy``` method in our last line of code.  
+
+Save this file in your VS Code and go to your Command Prompt to run the following line:  
+
+```
+node deploy.js
+```
+
+If your contract was deployed successfully you will see the following:  
+
+insert pic  
+
+Now, we can go check this Contract Deployment transaction on this website:  
+
+https://rinkeby.etherscan.io/  
+
+In the search bar, copy the address of the Smart Contract which is this:  
+
+insert pic  
+
+Then paste it on the Etherscan search bar and search for it. You should find this:  
+
+insert pic  
+
+AS you can see, deploying this Smart Contract is a transaction we pay to do using Ethereum. We can go back to our balance and we will see that a small amount ETH was deducted:  
+
+insert pic  
+
+YAY🎊 You just deployed your first Smart Contract to the Ethereum Blockchain! 🤯
 
