--- a/7. Deploy.md
+++ b/7. Deploy.md
@@ -8,15 +8,15 @@ https://infura.io/
 
 Once you are on the main dashboard, click on ```CREATE NEW PROJECT```. Fill the form like the picture below:  
   
-insert pic  
+![infura](https://user-images.githubusercontent.com/72712113/150332052-c37b149b-c37e-476a-b93f-758a9ca6ff97.png)
   
-Now, your project is ready. However, you have to change the network from Mainnetto Rinkeby:  
-  
-insert pic  
+Now, your project is ready. However, you have to change the network from Mainnet to Rinkeby:  
+ 
+![chooseNet](https://user-images.githubusercontent.com/72712113/150332112-a564b9fa-d59b-48e8-b145-9acef1c4dab6.png)
 
 After that, we have have to copy the first link:  
 
-insert pic  
+![saveLink](https://user-images.githubusercontent.com/72712113/150332162-f5e4c5da-afe5-4826-8eb4-f2b5036a08fd.png)  
 
 This link is the API link we will feed to our deployment file in this tutorial in addition to the 12-word mnemonic (secret phrase).  
 
@@ -24,7 +24,7 @@ This link is the API link we will feed to our deployment file in this tutorial i
 
 Now we can start our deployment tutorial by creating the file ```deploy.js``` in your main directory/folder (MyFirstSmartContract):  
 
-insert pic  
+![deploy js](https://user-images.githubusercontent.com/72712113/150332326-d72c8af5-7efd-4f08-b8d5-67e91c89dd92.png)
 
 Now, copy and paste the following code into your ```deploy.js``` file and we will learn together what each line of code means and does.  
 
@@ -84,23 +84,23 @@ node deploy.js
 
 If your contract was deployed successfully you will see the following:  
 
-insert pic  
+![deployed](https://user-images.githubusercontent.com/72712113/150332378-7c558ded-abe0-4cf0-8e9a-5bac389779a1.png)
 
 Now, we can go check this Contract Deployment transaction on this website:  
 
 https://rinkeby.etherscan.io/  
 
 In the search bar, copy the address of the Smart Contract which is this:  
-
-insert pic  
+ 
+![address](https://user-images.githubusercontent.com/72712113/150332396-6b414075-797e-4fd8-8376-c8c1c2ff4ca4.png)
 
 Then paste it on the Etherscan search bar and search for it. You should find this:  
 
-insert pic  
+![etherscan](https://user-images.githubusercontent.com/72712113/150332404-67700f2a-225b-46a9-8403-284e4207c8a2.png)
 
 AS you can see, deploying this Smart Contract is a transaction we pay to do using Ethereum. We can go back to our balance and we will see that a small amount ETH was deducted:  
 
-insert pic  
+![balance](https://user-images.githubusercontent.com/72712113/150332416-23844faf-4e7b-48bb-b6dc-3cd949ebb6f8.png)
 
 YAY🎊 You just deployed your first Smart Contract to the Ethereum Blockchain! 🤯
 
