--- a/6. Metamask.md
+++ b/6. Metamask.md
@@ -4,7 +4,7 @@ MetaMask is a software cryptocurrency wallet used to interact with the Ethereum 
 
 ## Important
 
-If you already have a MetaMask account, make sure you have test eth in your first account. If you don't have eth in your first account, check this part of the tutorial where we request test eth. Also, make sure you haev your MetaMask 12-word mnemonic written down/saved because we will use it in the deployment part of our tutorial.  
+If you already have a MetaMask account, make sure you have test eth in your first account. If you don't have eth in your first account, [check this part of the tutorial](#Funding) where we request test eth. Also, make sure you haev your MetaMask 12-word mnemonic written down/saved because we will use it in the deployment part of our tutorial.  
 
 ##
 
@@ -50,6 +50,7 @@ Now go back to the main page and you can see all the networks. Click on the Rink
  
 ![rinkeby](https://user-images.githubusercontent.com/72712113/150322842-efa3eeba-64d4-43c9-aa0c-e75d4e9366f4.png)
 
+### Funding
 Now, we can see that we have no funds in our account. Follow the steps below to request test eth for our account:  
 
 Testnet ETH is available from: https://faucets.chain.link/rinkeby  
